--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  supabase: 2.7.0
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   supabase_flutter: ^2.9.0
   get_storage: ^2.1.1
   path_provider: ^2.1.5
   image_picker: ^1.1.2
-
+  intl: ^0.18.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
